	* Features:
		- Added nu-SVR for LibSVR class
		- Modelselection is now supported for parameters of sub-kernels of
		  combined kernels in the MKL context. Thanks to Evangelos Anagnostopoulos
		- Probability output for multi-class SVMs is now supported using various
		  heuristics. Thanks to Shell Xu Hu.
		- Added an "equals" method to all Shogun objects that recursively
		  compares all registered parameters with those of another instance -- 
		  up to a specified accuracy.
		- Added a "clone" method to all Shogun objects that creates a deep copy
		- Multiclass LDA. Thanks to Kevin Hughes.
		- Added a new datatype, complex64_t, for complex numbers. Math functions,
		  support for SGVector/Matrix, SGSparseVector/Matrix, and serialization
		  with Ascii and Xml files added. [Soumyajit De].
	* Bugfixes:
		- Fix json serialization.
		- Fixed bugs in FITC inference method that caused wrong posterior results.
		- Fixed bugs in GP Regression that caused negative values for the variances.
		- Fixed two memory errors in the streaming-features framework.
	* Cleanup and API Changes:
		- Rename HMSVMLabels to SequenceLabels
		- Refactored method to fit a sigmoid to SVM scores, now in CStatistics,
		  still called from CBinaryLabels.
		- Use Dynamic arrays to hold preprocessors in features instead of raw pointers.
		- Use Dynamic arrays to hold Features in CombinedFeatures.
		- Use Dynamic arrays to hold Kernels in CombinedKernels/ProductKernels.
		- Use Eigen3 for GPs, LDA

2013-03-17 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 2.1.0 (libshogun 13.0, data 0.5, parameter 1)
	* This release also contains several enhancements, cleanups and bugfixes:
	* Features:
		- Linear Time MMD two-sample test now works on streaming-features, which
		  allows to perform tests on infinite amounts of data. A block size may
		  be specified for fast processing. The below features were also added.
		  By Heiko Strathmann.