@@ -9,13 +9,14 @@
 		- Probability output for multi-class SVMs is now supported using various
 		  heuristics. Thanks to Shell Xu Hu.
 		- Added an "equals" method to all Shogun objects that recursively
-		  compares all registered parameters with those of another instance -- 
+		  compares all registered parameters with those of another instance --
 		  up to a specified accuracy.
 		- Added a "clone" method to all Shogun objects that creates a deep copy
 		- Multiclass LDA. Thanks to Kevin Hughes.
 		- Added a new datatype, complex64_t, for complex numbers. Math functions,
 		  support for SGVector/Matrix, SGSparseVector/Matrix, and serialization
 		  with Ascii and Xml files added. [Soumyajit De].
+		- Added numerical integration stuff
 	* Bugfixes:
 		- Fix json serialization.
 		- Fixed bugs in FITC inference method that caused wrong posterior results.
